# LigharX

./: CMakeLists.txt
assets/: CMakeLists.txt  demo.cu
cmake/: FindAssimp.cmake  FindOptiX.cmake
examples/demo/: CMakeLists.txt  app.cpp
examples/demo/assets/: CMakeLists.txt  demo.cu
include/: app.hpp  app_config.h  args.hpp  common.hpp  core.hpp  denoise.hpp  except.hpp  ext.hpp  log.hpp  mat.hpp  ty.hpp  vector_math.h  x-device.hpp  x-mat.hpp  x-std-samp.hpp  x.hpp
src/: app.cpp  args.cpp  common.cpp  denoise.cpp  except.cpp  impl.cpp  log.cpp  mat.cpp  transact.cu
